9 - SignUp sayfası ve User view model oluşturuldu.

--- a/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/home/login">Giriş</a>
+        <a href="/home/signup">Üye Ol</a>
+    </nav>
+
     <div>
         @RenderBody()
     </div>
