--- a/Identity/Views/_ViewImports.cshtml
+++ b/Identity/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers;
-@using Identity.Models;
+@using Identity.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
