18 - Cookie builder sırası değiştirildi. Login view model'e remember me eklendi.

--- a/Identity/Views/Home/Login.cshtml
+++ b/Identity/Views/Home/Login.cshtml
@@ -9,5 +9,6 @@
 <form asp-action="Login">
     <input asp-for="Email" placeholder="Email" />
     <input asp-for="Password" type="password" placeholder="Password" />
+    <input asp-for="RememberMe" type="checkbox" />
     <button type="submit">Giriş</button>
 </form>
