20 - ResetPassword view ve actionları oluşturuldu.

--- a/Identity/Views/Home/Login.cshtml
+++ b/Identity/Views/Home/Login.cshtml
@@ -12,3 +12,5 @@
     <input asp-for="RememberMe" type="checkbox" />
     <button type="submit">Giriş</button>
 </form>
+
+<a asp-action="ResetPassword">Şifremi unuttum</a>
