--- a/Identity/Views/Shared/_AdminLayout.cshtml
+++ b/Identity/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
 
 <body>
     <nav>
-        <a href="/">Home</a>
+        <a asp-action="Index" asp-controller="Home">Home</a>
     </nav>
 
     <div>
