--- a/Identity/Views/Shared/_Layout.cshtml
+++ b/Identity/Views/Shared/_Layout.cshtml
@@ -8,9 +8,9 @@
 
 <body>
     <nav>
-        <a href="/">Home</a>
-        <a href="/home/login">Giriş</a>
-        <a href="/home/signup">Üye Ol</a>
+        <a asp-action="Index" asp-controller="Home">Home</a>
+        <a asp-action="Login" asp-controller="Home">Giriş</a>
+        <a asp-action="SignUp" asp-controller="Home">Üye Ol</a>
     </nav>
 
     <div>
