28 - Logout action oluşturuldu. Logout path tanımlandı. Logout link'e return url belirtildi. Üye çıkış yaptığında home index'e yönlendirilecek.

--- a/Identity/Views/Shared/_MemberLayout.cshtml
+++ b/Identity/Views/Shared/_MemberLayout.cshtml
@@ -21,7 +21,7 @@
         <div style="display: flex; flex-direction: column;">
             <a asp-action="UserEdit" asp-controller="Member">Bilgileri Düzenle</a>
             <a asp-action="PasswordChange" asp-controller="Member">Şifre Değiştir</a>
-            <a asp-action="Logout" asp-controller="Member">Logout</a>
+            <a asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/home/index">Logout</a>
         </div>
     </div>
 </body>
