30 - App User'a yeni eklenen şehir, cinsiyet ve doğum tarihi alanlarını kullanan action'lar ve view'ler güncellendi.

--- a/Identity/Views/Member/Index.cshtml
+++ b/Identity/Views/Member/Index.cshtml
@@ -12,5 +12,8 @@
         <li>Kullanıcı Adı: @Model.UserName</li>
         <li>Email: @Model.Email</li>
         <li>Telefon Numarası: @Model.PhoneNumber</li>
+        <li>Şehir: @Model.City</li>
+        <li>Cinsiyet: @Model.Gender</li>
+        <li>Doğum Tarihi: @Model.BirthDate?.ToString("d")</li>
     </ul>
 </div>
