--- a/Identity/Views/Admin/Index.cshtml
+++ b/Identity/Views/Admin/Index.cshtml
@@ -1,18 +1,6 @@
-@model List<AppUser>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Admin Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h1>Admin Index</h1>
-
-@if (Model.Any())
-{
-    <ul>
-        @foreach (var user in Model)
-        {
-            <li>@user.UserName</li>
-        }
-    </ul>
-}
