--- a/Identity/Views/Admin/Users.cshtml
+++ b/Identity/Views/Admin/Users.cshtml
@@ -12,7 +12,10 @@
     <ul>
         @foreach (var user in Model)
         {
-            <li>@user.Id: @user.UserName - @user.Email</li>
+            <li>
+                @user.Id: @user.UserName - @user.Email
+                <a asp-action="AssignRole" asp-route-id="@user.Id">Rol Ata</a>
+            </li>
         }
     </ul>
 }
