38 - Custom Tag Helper User Roles oluşturuldu. Üyeler sayfasında üyenin rolleri gösterildi.

--- a/Identity/Views/Admin/Users.cshtml
+++ b/Identity/Views/Admin/Users.cshtml
@@ -14,6 +14,7 @@
         {
             <li>
                 @user.Id: @user.UserName - @user.Email
+                <p user-roles="@user.Id"></p>
                 <a asp-action="AssignRole" asp-route-id="@user.Id">Rol Ata</a>
             </li>
         }
