--- a/Identity/Views/Shared/_MemberLayout.cshtml
+++ b/Identity/Views/Shared/_MemberLayout.cshtml
@@ -9,6 +9,9 @@
 <body>
     <nav>
         <a asp-action="Index" asp-controller="Member">Profil</a>
+        <a asp-action="Index" asp-controller="Admin">Admin</a>
+        <a asp-action="Editor" asp-controller="Member">Editor</a>
+        <a asp-action="Manager" asp-controller="Member">Manager</a>
     </nav>
 
     <div style="display: flex;
