41 - Claims action ve view'i oluşturuldu.

--- a/Identity/Views/Shared/_AdminLayout.cshtml
+++ b/Identity/Views/Shared/_AdminLayout.cshtml
@@ -21,6 +21,7 @@
         <div style="display: flex; flex-direction: column;">
             <a asp-action="Users" asp-controller="Admin">Üyeler</a>
             <a asp-action="Roles" asp-controller="Admin">Roller</a>
+            <a asp-action="Claims" asp-controller="Admin">Claimler</a>
             <a asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/home/index">Logout</a>
         </div>
     </div>
