48 - Facebook ile giriş eklendi. Kullanıcı adında izin verilen karakterler güncellendi. Facebook app id ve secret, user secrets olarak eklendi.

--- a/Identity/Views/Home/Login.cshtml
+++ b/Identity/Views/Home/Login.cshtml
@@ -13,4 +13,5 @@
     <button type="submit">Giriş</button>
 </form>
 
+<a asp-action="FacebookLogin">Facebook ile Giriş Yap</a>
 <a asp-action="ResetPassword">Şifremi unuttum</a>
