51 - Google ile giriş eklendi. Google client id ve secret, user secrets'a eklendi.

--- a/Identity/Views/Home/Login.cshtml
+++ b/Identity/Views/Home/Login.cshtml
@@ -13,5 +13,8 @@
     <button type="submit">Giriş</button>
 </form>
 
-<a asp-action="FacebookLogin">Facebook ile Giriş Yap</a>
-<a asp-action="ResetPassword">Şifremi unuttum</a>
+<div style="display: flex; flex-direction: column;">
+    <a asp-action="FacebookLogin">Facebook ile Giriş Yap</a>
+    <a asp-action="GoogleLogin">Google ile Giriş Yap</a>
+    <a asp-action="ResetPassword">Şifremi unuttum</a>
+</div>
