52 - Microsoft ile giriş eklendi. Giriş methodu güncellendi. Zaten kayıtlı bir kullanıcı giriş yapmak isterse kayıt işlemi geçiliyor.

--- a/Identity/Views/Home/Login.cshtml
+++ b/Identity/Views/Home/Login.cshtml
@@ -16,5 +16,6 @@
 <div style="display: flex; flex-direction: column;">
     <a asp-action="FacebookLogin">Facebook ile Giriş Yap</a>
     <a asp-action="GoogleLogin">Google ile Giriş Yap</a>
+    <a asp-action="MicrosoftLogin">Microsoft ile Giriş Yap</a>
     <a asp-action="ResetPassword">Şifremi unuttum</a>
 </div>
